# SDR-GPS-receiver

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/acquisition/: sdr-receiver.h  sdr_receiver.h  signal_acquisition.h
include/decoding/: nav_decoder.h
include/tracking/: correlator.h  gps_tracker.h
include/utils/: gps-constants.h  prn_generator.h
scripts/: capture_raw_data.py  plot_results.py
src/: main.cpp
src/acquisition/: sdr_receiver.cpp
src/utils/: prn_generator.cpp
tests/: test_correlator.cpp
